tests/ui/coherence/coherence_local_err_tuple.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence_local_err_tuple.rs:14:1
   |
LL | impl lib::MyCopy for (MyType,) { }
   | ^^^^^^^^^^^^^^^^^^^^^---------
   |                      |
   |                      this is not defined in the current crate because tuples are always foreign
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
